[TruongNLN] transform Thuc's slides to mdx

--- a/slides/case-study-abstraction.mdx
+++ b/slides/case-study-abstraction.mdx
@@ -4,6 +4,7 @@ import {
   MermaidViewer,
   CodeDescription,
   WhiteColumnLayout,
+  LayoutColumn,
   WhiteLayout,
 } from "netcompany-mdx-slide";
 
@@ -544,7 +545,9 @@ classDiagram
 
 <WhiteLayout title={"The case study"}>
 
-### Abstraction - It's not just the domain objects
+### Abstraction
+
+> It's not just about the domain objects
 
 <MermaidViewer>
 
