--- a/slides/case-study-inheritant.mdx
+++ b/slides/case-study-inheritant.mdx
@@ -6,3 +6,15 @@ import {
   WhiteColumnLayout,
   WhiteLayout,
 } from "netcompany-mdx-slide";
+
+<WhiteLayout title={"The case study"}>
+
+### Inheritance - DRY
+
+- allows to derive a class from another class
+
+- it is a relationship between a superclass and a subclass where subclasses inherits non-private data and behavior from the superclass.
+
+- help to achieve run time polymorphism
+
+</WhiteLayout>
