--- a/slides/case-study-polymophism.mdx
+++ b/slides/case-study-polymophism.mdx
@@ -6,3 +6,15 @@ import {
   WhiteColumnLayout,
   WhiteLayout,
 } from "netcompany-mdx-slide";
+
+<WhiteLayout title={"The case study"}>
+
+### Polymorphism - The next level of Abstraction
+
+- The word itself indicates the meaning as **poly** means *many* and **morphism** means *types*.
+
+- Polymorphism is a property through which any message can be sent to objects of multiple classes, and every object has the tendency to respond in an appropriate way depending on the class properties.
+
+- This means that polymorphism is the method in an OOP language that does different things depending on the class of the object which calls it.
+
+</WhiteLayout>
