--- a/slides/introduction.mdx
+++ b/slides/introduction.mdx
@@ -30,10 +30,10 @@ import netcompanyService from "./assets/netcompany-service.png";
 
 ### Phan Cong Thuc
 
-- 1.
-- 2.
-- 3.
-- 4.
+- A Software Engineer​
+- More than 6 years of working experience in IT industry.​
+- Joined Netcompany Vietnam since May 2019 as a Consultant.​
+- Promoted to Master from January 1, 2023.
 
 </LayoutColumn>
 <LayoutColumn>
