--- a/slides/case-study-inheritant.mdx
+++ b/slides/case-study-inheritant.mdx
@@ -4,6 +4,7 @@ import {
   MermaidViewer,
   CodeDescription,
   WhiteColumnLayout,
+  LayoutColumn,
   WhiteLayout,
 } from "netcompany-mdx-slide";
 
@@ -18,3 +19,21 @@ import {
 - help to achieve run time polymorphism
 
 </WhiteLayout>
+
+---
+
+<CodeLayout title={"The case study"} subTitle={"Inheritance - DRY"}>
+
+```java 8:21 file=../src/main/java/com/netcompany/core/AbstractMenu.java showNumbers
+
+```
+
+```java 23:46 file=../src/main/java/com/netcompany/core/AbstractMenu.java showNumbers
+
+```
+
+```java 10:29 file=../src/main/java/com/netcompany/menu/MainMenu.java showNumbers
+
+```
+
+</CodeLayout>
