--- a/slides/main-slide.mdx
+++ b/slides/main-slide.mdx
@@ -14,6 +14,7 @@ import caseStudyAbstractionSlides from './case-study-abstraction.mdx';
 import caseStudyEncapsulationSlides from './case-study-encapsulation.mdx';
 import caseStudyInheritantSlides from './case-study-inheritant.mdx';
 import caseStudyPolymophismSlides from './case-study-polymophism.mdx';
+import caseStudyConclusionSlides from './case-study-conclusion.mdx';
 import realProjectExamplesSlides from './real-project-examples.mdx';
 import summarySlides from './summary.mdx';
 import practicalsSlides from './practicals.mdx';
@@ -53,6 +54,10 @@ export const theme = netcompanyTheme;
 ---
 
 <ImportSlides src={caseStudyPolymophismSlides}/>
+
+---
+
+<ImportSlides src={caseStudyConclusionSlides}/>
 
 ---
 
