--- a/slides/practicals.mdx
+++ b/slides/practicals.mdx
@@ -26,7 +26,7 @@ Use object-oriented programming to build a simple expense application.
 - Identify actor(s) of this application.
 - Identify objects, their properties and methods name.
 - Describe relationship of objects, object hierarchy.
-- Describe detail of submit and approve function.
+- Describe main functions.
 
 </WhiteLayout>
 
