--- a/slides/introduction.mdx
+++ b/slides/introduction.mdx
@@ -77,7 +77,7 @@ import netcompanyService from "./assets/netcompany-service.png";
 
 Netcompany is one of Europe’s fastest growing and most successful IT services companies, leading the way in showing how digital transformation can create strong, sustainable societies, successful companies and better lives for us all.
 
-Our ambition is to become the market leader within IT services in Europe. The acquisition of Intrasoft in 2021 has strengthened our foundation to achieve that ambition – further expanding our portfolio of platforms and unique expertise across sectors with a global headcount of +6,500 talented employees.
+Our ambition is to become the market leader within IT services in Europe. The acquisition of Intrasoft in 2021 has strengthened our foundation to achieve that ambition - further expanding our portfolio of platforms and unique expertise across sectors with a global headcount of +7,400 talented employees.
 
 By building flexible, scalable and secure digital platforms, Netcompany is positioned to help Europe thrive through a decade of massive digitisation.
 
