--- a/slides/real-project-examples.mdx
+++ b/slides/real-project-examples.mdx
@@ -7,7 +7,7 @@ import {
 import ex_collection_list from "./assets/ex_collection_list.png";
 import ex_java_string from "./assets/ex_java_string.png";
 
-<SectionHeadLayout title={"Example from real projects"} />
+<SectionHeadLayout title={"Example\nfrom real projects"} />
 
 ---
 
