--- a/slides/case-study-conclusion.mdx
+++ b/slides/case-study-conclusion.mdx
@@ -8,9 +8,213 @@ import {
   WhiteLayout,
 } from "netcompany-mdx-slide";
 
-<WhiteLayout title={"The case study"}>
+import code_structure from "./assets/code_structure.png";
+import loc_analysis from "./assets/loc_analysis.png";
+
+<WhiteColumnLayout title={"The case study"} sizes={[3,4]} colors={['#fff','#0f2147']} texts={['#0f2147','#fff']}>
+<LayoutColumn>
 
 ### Conclusion
 
+- Well-organized project
 
-</WhiteLayout>
+- Easier to locate the issue
+
+</LayoutColumn>
+<LayoutColumn>
+<div
+  style={{
+    display: "flex",
+    justifyContent: "center",
+    alignItems: "start",
+    flex: 1,
+    width: "100%",
+  }}
+>
+  <img src={code_structure} alt="code_structure" />
+</div>
+</LayoutColumn>
+</WhiteColumnLayout>
+
+---
+
+<WhiteColumnLayout title={"The case study"} sizes={[3,4]} colors={['#fff','#0f2147']} texts={['#0f2147','#fff']}>
+<LayoutColumn>
+
+### Conclusion
+
+- Well-organized project
+
+- Easier to locate the issue
+
+- Easier to comprehend and start coding
+
+</LayoutColumn>
+<LayoutColumn>
+<div
+  style={{
+    display: "flex",
+    flex: 1,
+    width: "100%",
+    flexDirection:"column"
+  }}
+>
+<CodeViewer>
+
+```java 5:13 file=../src/main/java/com/netcompany/core/Menu.java
+
+```
+
+```java 3:7 file=../src/main/java/com/netcompany/core/MenuItem.java
+
+```
+
+```java 9:31 file=../src/main/java/com/netcompany/service/CourseService.java
+
+```
+
+</CodeViewer>
+</div>
+</LayoutColumn>
+</WhiteColumnLayout>
+
+---
+
+<WhiteColumnLayout title={"The case study"} sizes={[3,4]} colors={['#fff','#0f2147']} texts={['#0f2147','#fff']}>
+<LayoutColumn>
+
+### Conclusion
+
+- Well-organized project
+
+- Easier to locate the issue
+
+- Easier to comprehend and start coding
+
+- Easier to find and re-use a logic
+
+</LayoutColumn>
+<LayoutColumn>
+<div
+  style={{
+    display: "flex",
+    flex: 1,
+    width: "100%",
+    flexDirection:"column"
+  }}
+>
+<CodeViewer>
+
+```java 8:46 file=../src/main/java/com/netcompany/core/AbstractMenu.java showNumbers zoomIn=1.3
+
+```
+
+```java 8:31 file=../src/main/java/com/netcompany/menu/manageGrade/ManageGradeMenu.java zoomIn=1.5
+
+```
+
+```java 6:29 file=../src/main/java/com/netcompany/utils/StringUtils.java zoomIn=1.5
+
+```
+
+</CodeViewer>
+</div>
+</LayoutColumn>
+</WhiteColumnLayout>
+
+---
+
+<WhiteColumnLayout title={"The case study"} sizes={[3,4]}>
+<LayoutColumn>
+
+### Conclusion
+
+- Well-organized project
+
+- Easier to locate the issue
+
+- Easier to comprehend and start coding
+
+- Easier to find and re-use a logic
+
+- Loosing the coupling and increase cohesion
+
+</LayoutColumn>
+<LayoutColumn>
+
+<MermaidViewer>
+
+```mermaid
+classDiagram
+  class Menu {
+      <<interface>>
+      +MenuItem[] menuItems
+  }
+
+  class MenuItem {
+      <<interface>>
+      +String itemName
+  }
+
+  class Service {
+      <<interface>>
+  }
+
+  class Repository {
+      <<interface>>
+  }
+
+  Menu--MenuItem
+  Menu--Service
+  MenuItem--Service
+  Service--Repository
+```
+
+```mermaid
+classDiagram
+    MainMenu--ManageCourseMenu
+    MainMenu--ManageGradeMenu
+    MainMenu--NewBalanceSheetMenu
+    MainMenu--ManageBalanceSheetMenu
+
+    ManageGradeMenu--CleanGradeFeature
+    ManageGradeMenu--UpdateGradeFeature
+    ManageGradeMenu--ShowCourseFeature
+```
+
+</MermaidViewer>
+</LayoutColumn>
+</WhiteColumnLayout>
+
+---
+
+<WhiteColumnLayout title={"The case study"} sizes={[3,4]}>
+<LayoutColumn>
+
+### Conclusion
+
+- Well-organized project
+
+- Easier to locate the issue
+
+- Easier to find and re-use a logic
+
+- Loosing the coupling and increase cohesion
+
+- Increase the complexity
+
+</LayoutColumn>
+<LayoutColumn>
+<div
+  style={{
+    display: "flex",
+    justifyContent: "center",
+    alignItems: "start",
+    flex: 1,
+    width: "100%",
+  }}
+>
+  <img src={loc_analysis} alt="loc_analysis" />
+</div>
+</LayoutColumn>
+</WhiteColumnLayout>
