[TruongNLN] update styles for slides

--- a/slides/case-study-conclusion.mdx
+++ b/slides/case-study-conclusion.mdx
@@ -24,11 +24,11 @@ import loc_analysis from "./assets/loc_analysis.png";
 <LayoutColumn>
 <div
   style={{
+    objectFit: 'contain',
+    overflow: "hidden",
     display: "flex",
-    justifyContent: "center",
-    alignItems: "start",
-    flex: 1,
-    width: "100%",
+    flexDirection: "row",
+    flex: "1",
   }}
 >
   <img src={code_structure} alt="code_structure" />
@@ -207,11 +207,11 @@ classDiagram
 <LayoutColumn>
 <div
   style={{
+    objectFit: 'contain',
+    overflow: "hidden",
     display: "flex",
-    justifyContent: "center",
-    alignItems: "start",
-    flex: 1,
-    width: "100%",
+    flexDirection: "row",
+    flex: "1",
   }}
 >
   <img src={loc_analysis} alt="loc_analysis" />
