--- a/slides/practicals.mdx
+++ b/slides/practicals.mdx
@@ -101,16 +101,15 @@ The application has abilities below:
 
 <div
   style={{
+    objectFit: 'contain',
+    overflow: "hidden",
     display: "flex",
-    flexDirection: "column",
+    flexDirection: "row",
     flex: "1",
-    alignSelf: "center",
-    paddingRight:"3em"
   }}
 >
-  <img
+  <img 
     src={parkingmng}
-    style={{ objectFit: "contain" }}
     alt="parkingmng" />
 </div>
 </LayoutColumn>
@@ -120,16 +119,15 @@ The application has abilities below:
 
 <div
   style={{
+    objectFit: 'contain',
+    overflow: "hidden",
     display: "flex",
-    flexDirection: "column",
+    flexDirection: "row",
     flex: "1",
-    alignSelf: "center",
-    paddingLeft:"3em"
   }}
 >
   <img 
     src={claimsys}
-    style={{objectFit: 'contain'}}
     alt="claimsys" />
 </div>
 </LayoutColumn>
