--- a/slides/real-project-examples.mdx
+++ b/slides/real-project-examples.mdx
@@ -20,11 +20,12 @@ import ex_java_string from "./assets/ex_java_string.png";
 <LayoutColumn>
 <div
   style={{
+    objectFit: 'contain',
+    overflow: "hidden",
     display: "flex",
-    flex: 1,
-    flexDirection:"row",
-    width:"100%",
-    justifyContent: "center"
+    flexDirection: "row",
+    flex: "1",
+    width: "100%",
   }}
 >
   <img src={ex_collection_list} alt="program_paradigms" />
@@ -43,11 +44,12 @@ import ex_java_string from "./assets/ex_java_string.png";
 <LayoutColumn>
 <div
   style={{
+    objectFit: 'contain',
+    overflow: "hidden",
     display: "flex",
-    flex: 1,
-    flexDirection:"row",
-    width:"100%",
-    justifyContent: "center"
+    flexDirection: "row",
+    flex: "1",
+    width: "100%",
   }}
 >
   <img src={ex_java_string} alt="ex_java_string" />
