--- a/slides/case-study-context.mdx
+++ b/slides/case-study-context.mdx
@@ -91,20 +91,22 @@ Meet his GPA management app:
   style={{
     display: "flex",
     justifyContent: "center",
-    alignItems: "start",
-    paddingTop: "2em",
-    flex: 1,
     width: "100%",
+    objectFit: 'contain',
+    overflow: "hidden",
+    display: "flex",
+    flexDirection: "row",
+    flex: "1",
   }}
 >
   <SwitcherSteps>
-    <img src={feature1} alt="dazzle" />
-    <img src={feature2} alt="dazzle" />
-    <img src={feature3} alt="dazzle" />
-    <img src={feature4} alt="dazzle" />
-    <img src={feature5} alt="dazzle" />
-    <img src={feature6} alt="dazzle" />
-    <img src={feature7} alt="dazzle" />
+    <img src={feature1} style={{objectFit: 'contain'}} alt="dazzle" />
+    <img src={feature2} style={{objectFit: 'contain'}} alt="dazzle" />
+    <img src={feature3} style={{objectFit: 'contain'}} alt="dazzle" />
+    <img src={feature4} style={{objectFit: 'contain'}} alt="dazzle" />
+    <img src={feature5} style={{objectFit: 'contain'}} alt="dazzle" />
+    <img src={feature6} style={{objectFit: 'contain'}} alt="dazzle" />
+    <img src={feature7} style={{objectFit: 'contain'}} alt="dazzle" />
   </SwitcherSteps>
 </div>
 
