--- a/slides/case-study-encapsulation.mdx
+++ b/slides/case-study-encapsulation.mdx
@@ -60,32 +60,63 @@ The current project overview:
 ---
 
 <CodeColumnLayout title={"The case study"} subTitle={"Polymorphism"} sizes={[4,3]}>
-  
+
   <LayoutStep>
 
-```java 395:452 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1,30 skipRows=398:411,431:448
+```java 20:22,26,27 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.8,30 subtitle=Main.java
 ```
 
-```java 10:15 file=../src/main/java/com/netcompany/entity/BalanceSheet.java showNumbers zoomIn=2
-```
-
-  </LayoutStep>
-  <LayoutStep>
-
-```java 395:421 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.1,30 skipRows=404:410
-```
-
-```java 10:15 file=../src/main/java/com/netcompany/entity/BalanceSheet.java showNumbers zoomIn=2 subtitle=BalanceSheet.java
+```java 10:15 file=../src/main/java/com/netcompany/entity/BalanceSheet.java showNumbers zoomIn=2 skipRows=17:212 subtitle=BalanceSheet.java
 ```
 
   </LayoutStep>
 
   <LayoutStep>
 
-```java 395:421 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.1,30
+```java 673[11:21],678[13:25],681[51:61],684[60:72] file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.3,30 subtitle=Main.java
 ```
 
-```java 10:15 file=../src/main/java/com/netcompany/entity/BalanceSheet.java showNumbers zoomIn=2 subtitle=BalanceSheet.java
+```java 33:39 file=../src/main/java/com/netcompany/entity/BalanceSheet.java showNumbers zoomIn=2 skipRows=17:32,40:212 subtitle=BalanceSheet.java
+```
+
+  </LayoutStep>
+
+  <LayoutStep>
+
+```java 673:684 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.3,30 subtitle=Main.java
+```
+
+```java 160:175 file=../src/main/java/com/netcompany/entity/BalanceSheet.java showNumbers zoomIn=1.3,20 skipRows=17:32,40:159,176:212 subtitle=BalanceSheet.java
+```
+
+  </LayoutStep>
+
+  <LayoutStep>
+
+```java 673:684 file=../src/main/java/com/netcompany/Main.java showNumbers zoomIn=1.3,30 subtitle=Main.java
+```
+
+```java 57:61 file=../src/main/java/com/netcompany/entity/BalanceSheet.java showNumbers zoomIn=2,30 skipRows=17:32,40:56,62:159,176:212 subtitle=BalanceSheet.java
+```
+
+  </LayoutStep>
+
+  <LayoutStep>
+
+```java 57:61 file=../src/main/java/com/netcompany/entity/BalanceSheet.java showNumbers zoomIn=2,30 skipRows=17:32,40:56,62:159,176:212 subtitle=BalanceSheet.java
+```
+
+```java 21,22,41,42 file=../src/main/java/com/netcompany/menu/newBalanceSheetMenu/UpdateBalancingExpectedGpaFeature.java showNumbers zoomIn=1.8,30 skipRows=12:20 subtitle=UpdateBalancingExpectedGpaFeature.java
+```
+
+  </LayoutStep>
+
+  <LayoutStep>
+
+```java 37:39 file=../src/main/java/com/netcompany/entity/BalanceSheet.java showNumbers zoomIn=2,30 skipRows=17:32,40:56,62:159,176:212 subtitle=BalanceSheet.java
+```
+
+```java 38 file=../src/main/java/com/netcompany/commonFeature/ShowBalanceSheetDetailFeature.java showNumbers zoomIn=1.5,30 skipRows=14:29,44:79 subtitle=ShowBalanceSheetDetailFeature.java
 ```
 
   </LayoutStep>
